--- a/MyPortfolio/package.json
+++ b/MyPortfolio/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@types/three": "^0.164.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
